# QuantSimX

./: ARCHITECTURE.md  CMakeLists.txt  DASHBOARD_INTEGRATION_EXAMPLES.cpp  DESIGN.md  LICENSE  README.md  TRADING_DASHBOARD_FEATURES.md  config.json  generate_test_data.sh  imgui.ini  market_data.csv  test_hft.cpp  test_performance.cpp
include/: Backtester.h  BinanceRESTClient.h  BinanceWebSocketClient.h  CSVWriter.h  Config.h  DashboardUI.h  HFT.h  HFTPerf.h  LatencyProfiler.h  LockFreeQueue.h  Logger.h  NetworkClient.h  OrderBook.h  ParameterSweep.h  RiskManager.h  Signal.h  SignalGenerator.h  SymbolIndex.h  ThreadPool.h  TickBuffer.h  TradeTracker.h  TradingAlgorithms.h  TradingEngine.h  VWAPCalculator.h
src/: Backtester.cpp  BinanceRESTClient.cpp  BinanceWebSocketClient.cpp  CSVWriter.cpp  DashboardUI.cpp  Logger.cpp  NetworkClient.cpp  OrderBook.cpp  ParameterSweep.cpp  SignalGenerator.cpp  ThreadPool.cpp  TradeTracker.cpp  TradingAlgorithms.cpp  TradingEngine.cpp  VWAPCalculator.cpp  main.cpp
tests/: test_hft_perf.cpp
tools/: run_backtest.cpp
